# orafail

./: .gitignore  CLAUDE.md  README.md  app_config.py  config.example.yaml  database_config.py  oraacle_loging_failure_monitor.py  orafail  pyproject.toml
.github/workflows/: qodana_code_quality.yml
src/oracle_login_failure_monitor/: __init__.py  main.py
src/orafail/: __init__.py  config.py  main.py
src/orafail/models/: __init__.py  all_results.py  app_config.py  database_config.py  database_result.py  database_results.py  event_key.py  failure_detail.py
tests/: __init__.py  test_config.py  test_demo.py  test_ui.py
