[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orafail"
version = "0.1.3"
description = "Oracle login failure monitor dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "oracledb>=3.4.2",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
orafail = "orafail.main:main"

[project.urls]
Repository = "https://github.com/balddba/orafail"

[tool.hatch.build.targets.wheel]
packages = ["src/orafail"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
