[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orafail"
version = "0.2.0"
description = "Oracle login failure monitor dashboard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "configdict>=2.14.2",
    "loguru>=0.7.3",
    "oracledb>=3.4.2",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "uv>=0.11.29",
]

[project.scripts]
orafail = "orafail.main:main"

[project.urls]
Repository = "https://github.com/balddba/orafail"

[tool.hatch.build.targets.wheel]
packages = ["src/orafail"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.publish]
version_files = [
    "src/orafail/__init__.py",
]

